# Just-Memory

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  HANDOFF_MCP_DEV.md  HANDOFF_SESSION10.md  HANDOFF_SESSION11.md  HANDOFF_SESSION12_local.md  HANDOFF_SESSION17.md  HANDOFF_SESSION18.md  HANDOFF_SESSION19.md  HANDOFF_SESSION20.md  HANDOFF_SESSION21.md  HANDOFF_SESSION22.md  LICENSE  README.md  README.v1.md  SECURITY.md  SPRINT_PLAN.md  check_schema.py  eslint.config.mjs  migrate_db.py  package-lock.json  package.json  test-quick.mjs  test-response.mjs  test-semantic-search.mjs  test-stats.mjs  tsconfig.build.json  tsconfig.json  tsconfig.v1.2.json  tsconfig.v1.3.json  tsconfig.v1.4.json  tsconfig.v1.5.json  tsconfig.v1.6.json  (+5 more)
.github/: pull_request_template.md
dist-v1.2/: just-memory-v1.2.js
dist-v1.3/: just-memory-v1.3.js
dist-v1.4/: just-memory-v1.4.js
dist-v1.5/: just-memory-v1.5.js
dist-v1.6/: just-memory-v1.6.js
dist-v1.7/: just-memory-v1.7.js
dist-v1.8/: just-memory-v1.8.js
dist-v1.9/: README.md  just-memory-v1.9.js
dist-v2.0/: just-memory-v2.0.d.ts  just-memory-v2.0.d.ts.map  just-memory-v2.0.js  just-memory-v2.0.js.map
dist-v2.1/: just-memory-v2.1.d.ts  just-memory-v2.1.d.ts.map  just-memory-v2.1.js  just-memory-v2.1.js.map
docs/: ARCHITECTURE.md  CONTRADICTION_DETECTION.md  EVOSTEWARD_HANDOFF.md  FEATURE_BRAINSTORM.md  HANDOFF_PROMPT.md  INNOVATIVE_FEATURES.md  MASTER_PLAN_V3.md  MCP_MEMORY_RESEARCH.md  MCP_MEMORY_RESEARCH_V2.md  MEMORY_DECAY.md  TOOL_COUNT_ANALYSIS.md  UNIMPLEMENTED_IDEAS.md  V1.3_FEATURE_RESEARCH.md
scripts/: download-qdrant.mjs  uninstall.mjs
src/: backup.ts  chat-ingestion.ts  claude-md-template.ts  config.ts  consolidation.ts  contradiction-resolution.ts  contradiction.ts  entities.ts  index.ts  just-memory-v1.1.ts  just-memory-v1.2.ts  just-memory-v1.3.ts  just-memory-v1.4.ts  just-memory-v1.5.ts  just-memory-v1.6.ts  just-memory-v1.7.ts  just-memory-v1.8.ts  just-memory-v1.ts  just-memory-v2.0.ts  just-memory-v2.1.ts  main.rs  memory.ts  models.ts  schema.ts  (+13 more)
(+119 files in other folders)
